# AlvaAR

src/: system.js
src/libs/: build.sh
src/libs/ibow_lcd/include/ibow_lcd/: lcdetector.h
src/libs/ibow_lcd/src/: lcdetector.cc
src/libs/obindex2/lib/: CMakeLists.txt
src/libs/obindex2/lib/include/obindex2/: binary_descriptor.h
src/libs/opencv/modules/js/: CMakeLists.txt
src/libs/opengv/: CMakeLists.txt
src/slam/: CMakeLists.txt
src/slam/src/: mapper.cpp  relocalizer.cpp  relocalizer.hpp  state.cpp  state.hpp  system.cpp  system.hpp  visual_frontend.cpp  visual_frontend.hpp
